--- a/FakeWebsite/html/dashboard.css
+++ b/FakeWebsite/html/dashboard.css
@@ -50,7 +50,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: transparent; #CC0000; #CC0000; #f5f5f5;
     border-right: 1px solid #eee;
     padding-right: 0px;
   }
@@ -69,8 +69,8 @@ body {
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
+  color: #CC0000; #CC0000; #fff;
+  background-color: transparent; #CC0000; #CC0000; #428bca;
 }
 
 
